Cleanup and more tests
